--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,8 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
-  },
-  "scripts": {
-    "test": "make test",
-    "start": "node app.js"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "util": "^0.12.3"
   }
 }
