--- a/package.json
+++ b/package.json
@@ -22,25 +22,26 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "util": "^0.12.3",
     "dotenv-webpack": "^1.8.0",
+    "express": "^4.17.1",
     "history": "^5.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.1",
+    "react-materialize": "^3.9.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
