--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
     "react-materialize": "^3.9.2",
     "react-redux": "^7.2.0",
