--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "history": "^5.0.0",
+    "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
+    "middlewares": "^0.1.1",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
