--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
@@ -48,6 +47,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "url": "^0.11.0",
     "util": "^0.12.3"
   },
   "devDependencies": {
