--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "history": "^5.0.0",
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
-    "middlewares": "^0.1.1",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
@@ -47,7 +47,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "url": "^0.11.0",
+    "sweetalert2-react": "^0.8.3",
     "util": "^0.12.3"
   },
   "devDependencies": {
