--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
