--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv-webpack": "^1.8.0",
@@ -31,6 +32,7 @@
     "history": "^5.0.0",
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
+    "md5": "^2.3.0",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
