--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "history": "^5.0.0",
     "jwt-simple": "^0.5.6",
+    "localforage": "^1.9.0",
     "lodash": "^4.17.15",
     "md5": "^2.3.0",
     "moment": "^2.27.0",
